test/shouldPass/vonVolker/test14.pas
program test14;

var
    s : string;

function StrFun(): string;
begin
    StrFun := 'Hallo';
end;

begin
    s := StrFun();
end.