test/shouldFail/expr/orStr.pas
program Sample;
var
  x : string;
begin
  x := 'hello' or 'world';
//     ^^^^^^^^^^^^^^^^^^
// Operator 'or' cannot be applied to string and string
end.
